fix(styles): newsletter prompt button weird on safari

--- a/components/newsletter-signup.module.scss
+++ b/components/newsletter-signup.module.scss
@@ -19,6 +19,7 @@
 }
 
 .input {
+	appearance: none;
 	background: lib.$color-foreground;
 	color: lib.$color-background;
 	outline: none;
